RonakT/13-02 - our services section changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,6 +690,7 @@ section {
 --------------------------------------------------------------*/
 .services .icon-box {
   padding: 30px;
+  height: 80%;
   position: relative;
   overflow: hidden;
   border-radius: 10px;
