--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1427,11 +1427,15 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #fff;
+  background: #ebf7fc;
 }
 
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: row !important;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #footer .footer-top .footer-contact h4 {
