--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,8 +489,8 @@ section {
 }
 
 .about .video-box {
-  background: url("../img/about.jpg") center center no-repeat;
-  background-size: cover;
+  background: url("../img/recycled_2.jpeg") center center no-repeat;
+  background-size: contain;
   min-height: 500px;
 }
 
@@ -782,6 +782,12 @@ section {
   overflow: hidden;
   z-index: 1;
   background: rgba(255, 255, 255, 0.6);
+}
+
+.portfolio-wrap img{
+  /* object-fit: cover; */
+  /* height: 230px; */
+  width: 100%;
 }
 
 .portfolio .portfolio-wrap::before {
@@ -1370,7 +1376,7 @@ section {
   padding: 0 0 30px 0;
   color: #444444;
   font-size: 14px;
-  background: #ebf7fc;
+  background: #AADCF2;
 }
 
 #footer .footer-newsletter {
@@ -1427,7 +1433,7 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #ebf7fc;
+  background: #AADCF2;
 }
 
 #footer .footer-top .footer-contact {
